Refactored the controllers into a generic controller and added more endpoints to swagger
